# asterisk-ari-client-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  recording.rs  simple_client.rs
examples/ast-docker/: Dockerfile  ari.conf  asterisk.conf  extensions.conf  pjsip.conf  rtp.conf  sip.conf
src/: .client.rs.swo  apis.rs  client.rs  errors.rs  lib.rs  models.rs
src/apis/: applications.rs  channels.rs  recordings.rs
src/models/: applications.rs  channels.rs  events.rs  playbacks.rs  recordings.rs
