[package]
name = "asterisk-ari-client-rs"
version = "0.1.1"
authors = ["abezecny"]
edition = "2018"
description = "Simple Asterisk ARI library"
license = "MIT OR Apache-2.0"
keywords = ["telephony", "asterisk"]
categories = ["multimedia", "multimedia::audio"]
repository = "https://github.com/jabber-tools/asterisk-ari-client-rs"
documentation = "https://docs.rs/jabber-tools/0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = "0.11.3"
http = "0.2.4"
base64 = "0.13.0"
tokio = { version = "1.7.1", default-features = false, features = ["macros", "time", "rt-multi-thread"] }
futures-util = { version = "0.3.15", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = "0.14.0"
url = "2.2.2"
urlencoding = "1.3.3"
log = "0.4.14"
chrono = "0.4.19"
rand = "0.8.3"
lazy_static = "1.4.0"

[dev-dependencies]
env_logger = "0.8.3"
