[package]
name = "asterisk-ari-client-rs"
version = "0.1.3"
authors = ["abezecny"]
edition = "2018"
description = "Simple Asterisk ARI library"
license = "MIT OR Apache-2.0"
keywords = ["telephony", "asterisk"]
categories = ["multimedia", "multimedia::audio"]
repository = "https://github.com/jabber-tools/asterisk-ari-client-rs"
documentation = "https://docs.rs/jabber-tools/0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = "0.11.22"
base64 = "0.21.5"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "time", "rt-multi-thread"] }
futures-util = { version = "0.3.29", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
urlencoding = "2.1.3"
log = "0.4.20"
chrono = "0.4.31"
rand = "0.8.5"
lazy_static = "1.4.0"

[dev-dependencies]
env_logger = "0.10.1"
